--- a/logged.html
+++ b/logged.html
@@ -5,7 +5,7 @@
         <script src="js/jquery-3.2.0.min.js"></script>
         <script src="js/bootstrap.min.js"></script>
         <script src="js/storj.es6.js"></script>
-        <script src="js/login.js"></script>
+        <script src="js/upload.js"></script>
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     </head>
     <body>
@@ -13,14 +13,11 @@
             <div class="row">
                 <div class="col-md-4"></div>
                 <div class="col-md-4">
-                    <p id="prv"></p>
+                    <input type="file" id="input" onchange="upload()">
                 </div>
                 <div class="col-md-4"></div>
                 
             </div>
         </div>
-    <script>
-        document.getElementById("prv").innerHTML = localStorage.getItem('storjPrv');
-    </script>
     </body>
 </html>
