fixed some css to get more swag

--- a/logged.html
+++ b/logged.html
@@ -6,6 +6,7 @@
         <script src="js/bootstrap.min.js"></script>
         <script src="js/storj.es6.js"></script>
         <script src="js/upload.js"></script>
+        <link rel="stylesheet" type="text/css" href="css/custom.css">
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     </head>
     <body>
