--- a/index.html
+++ b/index.html
@@ -22,6 +22,23 @@
                         <label> Password: </label>
                         <input type="password" name="password" id="password" class="form-control" placeholder="Password">
                         </div>
+                        <div class="form-group">
+                        <label> Chiave mnemonica (12 parole): </label>
+                        <input type="text" name="mnemonic" id="mnemonic" class="form-control" placeholder="Chiave Mnemonica">
+                        </div>
+                        <div class="form-group">
+                        <label> Non hai ancora una chiave mnemonica? <button type="button" class="btn btn-default" onclick="generateMnemonic()">Generala ora</button>  </label>
+                        <script>
+                            function generateMnemonic(){
+                                var alert = document.createElement("div");
+                                alert.setAttribute("class", "alert alert-success");
+                                alert.setAttribute("role", "alert");
+                                
+                                var mnemonic = document.createTextNode("La tua nuova chiave e': " + Storj.generateEncryptionKey() + ". Salvala da qualche parte, servira' per caricare e scaricare i tuoi file");
+                                alert.appendChild(mnemonic);
+                                document.getElementById("login_form_1").appendChild(alert);
+                            }
+                        </script>
                         <input type="button" id="submit"class="btn btn-primary" value="Login" onclick="Login()">
                     </form>
                 </div>
